--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,10 +11,10 @@ pipeline {
     stages {
         stage('Setup Environment') {
             steps {
-                echo 'Installing python3-venv if not installed...'
+                 echo 'Checking if python3 and python3-venv are installed...'
                 sh '''
-                    sudo apt update
-                    sudo apt install -y python3-venv
+                    python3 --version || { echo "Python3 is not installed"; exit 1; }
+                    python3 -m venv --help || { echo "python3-venv is not installed"; exit 1; }
                 '''
                 echo 'Setting up Virtual Environment...'
                 sh 'python3 -m venv $VENV_DIR'
