--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                 echo 'Setting up Virtual Environment...'
                 sh '''
                     python3 -m venv $VENV_DIR
-                    source $VENV_DIR/bin/activate
+                    . $VENV_DIR/bin/activate
                     pip install --upgrade pip
                     pip install -r requirements.txt --quiet
                 '''
