Fixed virtual environment issue in Jenkinsfile

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                 echo 'Starting MLflow Tracking Server...'
                 sh '''
                     . $VENV_DIR/bin/activate
-                    nohup mlflow server --backend-store-uri sqlite:///mlflow.db --host 0.0.0.0 --port 5000 &
+                    mlflow ui --host 0.0.0.0 --port 5000 &
                 '''
                 sleep 5
             }
